--- a/imovel_certo_app.html
+++ b/imovel_certo_app.html
@@ -110,9 +110,15 @@
                     const parsedUser = JSON.parse(userData);
                     setUser(parsedUser);
 
-                    let cargo = parsedUser?.cargo || 'captador';
+                    let cargo = parsedUser?.cargo;
                     if (cargo === 'gerente_regional') {
                         cargo = 'gerente';
+                    } else if (cargo === 'administrador') {
+                        cargo = 'administrador'; // Adiciona tratamento para administrador
+                    } else if (cargo === 'diretor') {
+                        cargo = 'diretor'; // Adiciona tratamento para diretor
+                    } else {
+                        cargo = 'captador'; // Padrão para captador se não for nenhum dos acima
                     }
                     localStorage.setItem('role', cargo);
                     console.log('Cargo carregado:', cargo);
@@ -144,6 +150,8 @@
                         localStorage.setItem('role', 'diretor');
                     } else if (cargo === 'gerente_regional') {
                         localStorage.setItem('role', 'gerente');
+                    } else if (cargo === 'administrador') {
+                        localStorage.setItem('role', 'administrador');
                     } else {
                         localStorage.setItem('role', 'captador');
                     }
@@ -932,13 +940,15 @@
             const getUserTitle = () => {
                 if (user.cargo === 'diretor') return 'Diretor';
                 if (user.cargo === 'gerente_regional') return 'Gerente Regional';
+                if (user.cargo === 'administrador') return 'Administrador';
                 return 'Captador';
             };
 
             const menuItems = [
-                { id: 'dashboard', label: 'Dashboard', icon: 'BarChart2', roles: ['diretor', 'gerente_regional', 'captador'] },
-                { id: 'kanban', label: 'Missões', icon: 'Columns', roles: ['diretor', 'gerente_regional', 'captador'] },
-                { id: 'relatorios', label: 'Relatórios', icon: 'Trophy', roles: ['diretor', 'gerente_regional'] }
+                { id: 'dashboard', label: 'Dashboard', icon: 'BarChart2', roles: ['diretor', 'gerente_regional', 'captador', 'administrador'] },
+                { id: 'kanban', label: 'Missões', icon: 'Columns', roles: ['diretor', 'gerente_regional', 'captador', 'administrador'] },
+                { id: 'relatorios', label: 'Relatórios', icon: 'Trophy', roles: ['diretor', 'gerente_regional'] },
+                { id: 'configuracoes', label: 'Configurações', icon: 'Settings', roles: ['administrador'] }
             ];
 
             const filteredMenuItems = menuItems.filter(item => item.roles.includes(user.cargo));
@@ -992,6 +1002,18 @@
             );
         };
 
+        // Página de Configurações
+        const ConfiguracoesPage = () => {
+            return (
+                <div>
+                    <h2 className="text-3xl font-bold mb-6 text-gray-800">Configurações</h2>
+                    <div className="bg-white p-6 rounded-lg shadow">
+                        <p className="text-gray-600">Página de configurações em desenvolvimento...</p>
+                    </div>
+                </div>
+            );
+        };
+
         // Dashboard Principal
         const Dashboard = () => {
             const { user, logout } = useAuth();
@@ -1030,6 +1052,8 @@
                         return <MissoesKanban user={user} missoesExternas={missoes} onRefresh={handleRefresh} />;
                     case 'relatorios':
                         return <RelatoriosPage />;
+                    case 'configuracoes':
+                        return <ConfiguracoesPage />;
                     default:
                         return <div>Selecione uma opção no menu</div>;
                 }
@@ -1056,7 +1080,7 @@
                                     </p>
                                 </div>
                                 
-                                {(user.cargo === 'diretor' || user.cargo === 'gerente_regional') && (
+                                {(user.cargo === 'diretor' || user.cargo === 'gerente_regional' || user.cargo === 'administrador') && (
                                     <button
                                         onClick={() => setShowNovaDemanda(true)}
                                         className="flex items-center px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-colors"
