--- a/imovel_certo_app.html
+++ b/imovel_certo_app.html
@@ -331,7 +331,187 @@
             </div>
         );
 
-        // Componente de Nova Demanda
+        // Componente de Nova Demanda como Página
+        const NovaDemandaPage = ({ onSuccess }) => {
+            const [formData, setFormData] = useState({
+                codigo_demanda: '',
+                consultor_locacao: '',
+                cliente_interessado: '',
+                contato: '',
+                tipo_imovel: '',
+                regiao_desejada: '',
+                faixa_aluguel: '',
+                caracteristicas_desejadas: '',
+                prazo_necessidade: '',
+                observacoes: ''
+            });
+
+            const handleChange = (e) => {
+                const { name, value } = e.target;
+                setFormData(prev => ({ ...prev, [name]: value }));
+            };
+
+            const handleSubmit = async (e) => {
+                e.preventDefault();
+                try {
+                    const response = await apiRequest('/api/demandas', {
+                        method: 'POST',
+                        body: formData
+                    });
+
+                    if (response.ok) {
+                        alert('Demanda criada com sucesso!');
+                        onSuccess();
+                        setFormData({
+                            codigo_demanda: '',
+                            consultor_locacao: '',
+                            cliente_interessado: '',
+                            contato: '',
+                            tipo_imovel: '',
+                            regiao_desejada: '',
+                            faixa_aluguel: '',
+                            caracteristicas_desejadas: '',
+                            prazo_necessidade: '',
+                            observacoes: ''
+                        });
+                    } else {
+                        const error = await response.json();
+                        alert('Erro ao criar demanda: ' + (error.error || 'Erro desconhecido'));
+                    }
+                } catch (error) {
+                    console.error('Erro ao criar demanda:', error);
+                    alert('Erro ao criar demanda');
+                }
+            };
+
+            return (
+                <div className="bg-white rounded-lg p-8 shadow-lg max-w-4xl mx-auto">
+                    <h2 className="text-3xl font-bold mb-6 text-gray-800">Criar Nova Demanda</h2>
+
+                    <form onSubmit={handleSubmit} className="space-y-6">
+                        <div className="grid grid-cols-2 gap-6">
+                            <FormInput
+                                label="Código da Demanda"
+                                name="codigo_demanda"
+                                value={formData.codigo_demanda}
+                                onChange={handleChange}
+                                required
+                            />
+
+                            <FormInput
+                                label="Consultor de Locação"
+                                name="consultor_locacao"
+                                value={formData.consultor_locacao}
+                                onChange={handleChange}
+                                required
+                            />
+                        </div>
+
+                        <div className="grid grid-cols-2 gap-6">
+                            <FormInput
+                                label="Cliente Interessado"
+                                name="cliente_interessado"
+                                value={formData.cliente_interessado}
+                                onChange={handleChange}
+                                required
+                            />
+
+                            <FormInput
+                                label="Contato"
+                                name="contato"
+                                value={formData.contato}
+                                onChange={handleChange}
+                                required
+                            />
+                        </div>
+
+                        <div className="grid grid-cols-2 gap-6">
+                            <FormSelect
+                                label="Tipo de Imóvel"
+                                name="tipo_imovel"
+                                value={formData.tipo_imovel}
+                                onChange={handleChange}
+                                required
+                                options={[
+                                    { value: 'Casa', label: 'Casa' },
+                                    { value: 'Apartamento', label: 'Apartamento' },
+                                    { value: 'Comercial', label: 'Comercial' },
+                                    { value: 'Terreno', label: 'Terreno' },
+                                    { value: 'Kitnet', label: 'Kitnet' }
+                                ]}
+                            />
+
+                            <FormInput
+                                label="Região Desejada"
+                                name="regiao_desejada"
+                                value={formData.regiao_desejada}
+                                onChange={handleChange}
+                                required
+                            />
+                        </div>
+
+                        <div className="grid grid-cols-2 gap-6">
+                            <FormInput
+                                label="Faixa de Aluguel"
+                                name="faixa_aluguel"
+                                value={formData.faixa_aluguel}
+                                onChange={handleChange}
+                                required
+                                placeholder="Ex: R$ 1.500 - R$ 2.500"
+                            />
+
+                            <FormInput
+                                label="Prazo de Necessidade"
+                                name="prazo_necessidade"
+                                value={formData.prazo_necessidade}
+                                onChange={handleChange}
+                                required
+                                placeholder="Ex: 30 dias"
+                            />
+                        </div>
+
+                        <FormTextarea
+                            label="Características Desejadas"
+                            name="caracteristicas_desejadas"
+                            value={formData.caracteristicas_desejadas}
+                            onChange={handleChange}
+                            rows={4}
+                            placeholder="Descreva as características desejadas do imóvel..."
+                        />
+
+                        <FormTextarea
+                            label="Observações"
+                            name="observacoes"
+                            value={formData.observacoes}
+                            onChange={handleChange}
+                            rows={3}
+                            placeholder="Informações adicionais..."
+                        />
+
+                        <div className="flex justify-end space-x-4">
+                            <button
+                                type="submit"
+                                className="px-6 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-colors font-semibold"
+                            >
+                                Criar Demanda
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            );
+        };
+
+        // Componente de Gerenciar Usuários
+        const GerenciarUsuariosPage = () => {
+            return (
+                <div className="bg-white rounded-lg p-8 shadow-lg">
+                    <h2 className="text-3xl font-bold mb-6 text-gray-800">Gerenciar Usuários</h2>
+                    <p className="text-gray-600">Funcionalidade em desenvolvimento...</p>
+                </div>
+            );
+        };
+
+        // Componente de Nova Demanda (Modal)
         const NovaDemanda = ({ onClose, onSuccess }) => {
             const [formData, setFormData] = useState({
                 codigo_demanda: '',
@@ -816,7 +996,7 @@
 
             const loadPerformanceData = async () => {
                 try {
-                    const response = await apiRequest('/api/relatorios/performance-captadores');
+                    const response = await apiRequest('/api/relatorios/performance');
                     if (response.ok) {
                         const data = await response.json();
                         setPerformanceData(data);
@@ -849,32 +1029,67 @@
                 );
             };
 
-            const PerformanceTab = () => (
-                <div className="bg-white rounded-lg shadow overflow-hidden">
-                    <table className="min-w-full divide-y divide-gray-200">
-                        <thead className="bg-gray-50">
-                            <tr>
-                                <th className="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Captador</th>
-                                <th className="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Missões</th>
-                                <th className="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Encontrados</th>
-                                <th className="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Locados</th>
-                                <th className="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Taxa</th>
-                            </tr>
-                        </thead>
-                        <tbody className="bg-white divide-y divide-gray-200">
-                            {performanceData.map((captador, index) => (
-                                <tr key={index}>
-                                    <td className="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{captador.nome}</td>
-                                    <td className="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{captador.totalMissoes}</td>
-                                    <td className="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{captador.encontrados}</td>
-                                    <td className="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{captador.locados}</td>
-                                    <td className="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{captador.taxa}%</td>
+            const PerformanceTab = () => {
+                const formatHoras = (horas) => {
+                    if (!horas || horas === null) return '-';
+                    return `${horas.toFixed(1)}h`;
+                };
+
+                const formatData = (dataString) => {
+                    if (!dataString) return '-';
+                    const data = new Date(dataString);
+                    return data.toLocaleDateString('pt-BR', { day: '2-digit', month: '2-digit', year: 'numeric' });
+                };
+
+                return (
+                    <div className="bg-white rounded-lg shadow overflow-hidden">
+                        <div className="p-6 border-b">
+                            <h3 className="text-lg font-semibold text-gray-800">Relatório de Performance por Missão</h3>
+                            <p className="text-sm text-gray-600 mt-1">Tempo de avanço de cada etapa das missões</p>
+                        </div>
+                        <table className="min-w-full divide-y divide-gray-200">
+                            <thead className="bg-gray-50">
+                                <tr>
+                                    <th className="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Código</th>
+                                    <th className="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Status</th>
+                                    <th className="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Data Missão</th>
+                                    <th className="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Tempo em Busca</th>
+                                    <th className="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Tempo Encontrado-Locado</th>
+                                    <th className="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Região</th>
                                 </tr>
-                            ))}
-                        </tbody>
-                    </table>
-                </div>
-            );
+                            </thead>
+                            <tbody className="bg-white divide-y divide-gray-200">
+                                {performanceData.length === 0 ? (
+                                    <tr>
+                                        <td colSpan="6" className="px-6 py-4 text-center text-sm text-gray-500">
+                                            Nenhum dado de performance disponível.
+                                        </td>
+                                    </tr>
+                                ) : (
+                                    performanceData.map((missao, index) => (
+                                        <tr key={index} className="hover:bg-gray-50">
+                                            <td className="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{missao.codigo_demanda}</td>
+                                            <td className="px-6 py-4 whitespace-nowrap text-sm">
+                                                <span className={`px-2 py-1 rounded-full text-xs font-medium ${
+                                                    missao.status === 'Locado' ? 'bg-green-100 text-green-800' :
+                                                    missao.status === 'Encontrado' ? 'bg-yellow-100 text-yellow-800' :
+                                                    'bg-blue-100 text-blue-800'
+                                                }`}>
+                                                    {missao.status}
+                                                </span>
+                                            </td>
+                                            <td className="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{formatData(missao.data_missao)}</td>
+                                            <td className="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{formatHoras(missao.tempo_em_busca_horas)}</td>
+                                            <td className="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{formatHoras(missao.tempo_encontrado_locado_horas)}</td>
+                                            <td className="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{missao.regiao_demanda}</td>
+                                        </tr>
+                                    ))
+                                )}
+                            </tbody>
+                        </table>
+                    </div>
+                );
+            };
 
             const DemandasTab = () => (
                 <div className="bg-white p-6 rounded-lg shadow">
@@ -1043,6 +1258,10 @@
                         return <MissoesKanban user={user} missoesExternas={missoes} onRefresh={handleRefresh} />;
                     case 'relatorios':
                         return <RelatoriosPage />;
+                    case 'nova-demanda':
+                        return <NovaDemandaPage onSuccess={handleRefresh} />;
+                    case 'gerenciar-usuarios':
+                        return <GerenciarUsuariosPage />;
                     default:
                         return <div>Selecione uma opção no menu</div>;
                 }
@@ -1069,7 +1288,7 @@
                                     </p>
                                 </div>
                                 
-                                {(user.cargo === 'diretor' || user.cargo === 'gerente_regional') && (
+                                {(user.cargo === 'diretor' || user.cargo === 'gerente_regional' || user.cargo === 'admin') && (
                                     <button
                                         onClick={() => setShowNovaDemanda(true)}
                                         className="flex items-center px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-colors"
@@ -1122,3 +1341,4 @@
     </script>
 </body>
 </html>
+
