--- a/imovel_certo_app.html
+++ b/imovel_certo_app.html
@@ -333,12 +333,13 @@
 
         // Componente de Nova Demanda como Página
         const NovaDemandaPage = ({ onSuccess }) => {
+            const { user } = useAuth();
             const [formData, setFormData] = useState({
-                codigo_demanda: '',
-                consultor_locacao: '',
+                codigo_demanda: `DEM-${Date.now()}`,
+                consultor_locacao: user?.nome || '',
                 cliente_interessado: '',
                 contato: '',
-                tipo_imovel: '',
+                tipo_imovel: 'Apartamento',
                 regiao_desejada: '',
                 faixa_aluguel: '',
                 caracteristicas_desejadas: '',
@@ -363,11 +364,11 @@
                         alert('Demanda criada com sucesso!');
                         onSuccess();
                         setFormData({
-                            codigo_demanda: '',
-                            consultor_locacao: '',
+                            codigo_demanda: `DEM-${Date.now()}`,
+                            consultor_locacao: user?.nome || '',
                             cliente_interessado: '',
                             contato: '',
-                            tipo_imovel: '',
+                            tipo_imovel: 'Apartamento',
                             regiao_desejada: '',
                             faixa_aluguel: '',
                             caracteristicas_desejadas: '',
@@ -433,11 +434,10 @@
                                 onChange={handleChange}
                                 required
                                 options={[
-                                    { value: 'Casa', label: 'Casa' },
                                     { value: 'Apartamento', label: 'Apartamento' },
-                                    { value: 'Comercial', label: 'Comercial' },
-                                    { value: 'Terreno', label: 'Terreno' },
-                                    { value: 'Kitnet', label: 'Kitnet' }
+                                    { value: 'Casa', label: 'Casa' },
+                                    { value: 'Sala Comercial', label: 'Sala Comercial' },
+                                    { value: 'Loja', label: 'Loja' }
                                 ]}
                             />
 
@@ -457,16 +457,21 @@
                                 value={formData.faixa_aluguel}
                                 onChange={handleChange}
                                 required
-                                placeholder="Ex: R$ 1.500 - R$ 2.500"
+                                placeholder="Ex: de 8mil a 10mil"
                             />
 
-                            <FormInput
+                            <FormSelect
                                 label="Prazo de Necessidade"
                                 name="prazo_necessidade"
                                 value={formData.prazo_necessidade}
                                 onChange={handleChange}
                                 required
-                                placeholder="Ex: 30 dias"
+                                options={[
+                                    { value: '', label: 'Selecione...' },
+                                    { value: 'Urgente', label: 'Urgente' },
+                                    { value: 'Até 7 dias', label: 'Até 7 dias' },
+                                    { value: 'Até 15 dias', label: 'Até 15 dias' }
+                                ]}
                             />
                         </div>
 
@@ -744,7 +749,7 @@
             const [novaInteracao, setNovaInteracao] = useState('');
             const [loading, setLoading] = useState(true);
 
-            const columns = ['Em busca', 'Encontrado', 'Locado'];
+            const columns = ['Em busca', 'Encontrado', 'Locado', 'Sem opção'];
 
             const loadMissoes = useCallback(async () => {
                 setLoading(true);
@@ -1052,6 +1057,8 @@
                                 <tr>
                                     <th className="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Código</th>
                                     <th className="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Status</th>
+                                    <th className="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Captador</th>
+                                    <th className="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Consultor</th>
                                     <th className="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Data Missão</th>
                                     <th className="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Tempo em Busca</th>
                                     <th className="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Tempo Encontrado-Locado</th>
@@ -1061,7 +1068,7 @@
                             <tbody className="bg-white divide-y divide-gray-200">
                                 {performanceData.length === 0 ? (
                                     <tr>
-                                        <td colSpan="6" className="px-6 py-4 text-center text-sm text-gray-500">
+                                        <td colSpan="8" className="px-6 py-4 text-center text-sm text-gray-500">
                                             Nenhum dado de performance disponível.
                                         </td>
                                     </tr>
@@ -1073,11 +1080,14 @@
                                                 <span className={`px-2 py-1 rounded-full text-xs font-medium ${
                                                     missao.status === 'Locado' ? 'bg-green-100 text-green-800' :
                                                     missao.status === 'Encontrado' ? 'bg-yellow-100 text-yellow-800' :
+                                                    missao.status === 'Sem opção' ? 'bg-red-100 text-red-800' :
                                                     'bg-blue-100 text-blue-800'
                                                 }`}>
                                                     {missao.status}
                                                 </span>
                                             </td>
+                                            <td className="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{missao.captador_nome || '-'}</td>
+                                            <td className="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{missao.consultor_locacao || '-'}</td>
                                             <td className="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{formatData(missao.data_missao)}</td>
                                             <td className="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{formatHoras(missao.tempo_em_busca_horas)}</td>
                                             <td className="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{formatHoras(missao.tempo_encontrado_locado_horas)}</td>
