--- a/imovel_certo_app.html
+++ b/imovel_certo_app.html
@@ -868,9 +868,18 @@
                 const agora = new Date();
                 const criacao = new Date(dataMissao);
                 const horasPassadas = (agora - criacao) / (1000 * 60 * 60);
-                if (horasPassadas > 48) return 'bg-red-500';
-                if (horasPassadas > 24) return 'bg-yellow-500';
+                if (horasPassadas > 24) return 'bg-red-500';
+                if (horasPassadas > 12) return 'bg-yellow-500';
                 return 'bg-green-500';
+            };
+
+            const getStatusPrazo = (dataMissao) => {
+                const agora = new Date();
+                const criacao = new Date(dataMissao);
+                const horasPassadas = (agora - criacao) / (1000 * 60 * 60);
+                if (horasPassadas > 24) return { status: 'ATRASADA', cor: 'text-red-600', bg: 'bg-red-100' };
+                if (horasPassadas > 12) return { status: 'ALERTA', cor: 'text-yellow-600', bg: 'bg-yellow-100' };
+                return { status: 'OK', cor: 'text-green-600', bg: 'bg-green-100' };
             };
 
             const handleDragStart = (e, missao) => {
@@ -927,7 +936,17 @@
                                             >
                                                 <div className="flex justify-between items-start mb-2">
                                                     <h4 className="font-semibold text-gray-900">{missao.codigo_demanda}</h4>
-                                                    <div className={`w-3 h-3 rounded-full ${getSLAColor(missao.data_criacao)}`}></div>
+                                                    <div className="flex items-center gap-2">
+                                                        <div className={`w-3 h-3 rounded-full ${getSLAColor(missao.data_missao)}`}></div>
+                                                        {(() => {
+                                                            const statusPrazo = getStatusPrazo(missao.data_missao);
+                                                            return (
+                                                                <span className={`px-2 py-1 rounded-full text-xs font-medium ${statusPrazo.bg} ${statusPrazo.cor}`}>
+                                                                    {statusPrazo.status}
+                                                                </span>
+                                                            );
+                                                        })()}
+                                                    </div>
                                                 </div>
                                                 <p className="text-sm text-gray-600 mb-2">{missao.descricao_busca}</p>
                                                 <div className="flex justify-between items-center text-xs text-gray-500">
